# relpo

./: .buildinfo  .gitignore  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  LICENSE.html  README.md  api.html  genindex.html  index.html  makefile  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js  top.html
.github/workflows/: test.yml
_modules/: index.html
_modules/zensols/relpo/: app.html  cli.html  doc.html  domain.html  envdist.html  project.html  remote.html  repo.html
_sources/: CHANGELOG.md.txt  CONTRIBUTING.md.txt  index.md.txt  top.rst.txt
_sources/api/: zensols.relpo.rst.txt  zensols.rst.txt
api/: zensols.html  zensols.relpo.html
src/zensols/relpo/: app.py  cli.py  condameta.py  doc.py  domain.py  envdist.py  project.py
test-resources/: changelog-1.md  dep-test.yml  doc.yml  envdist-file.yml  envdist.yml  local-invoke-task.toml  local-package-task.toml  meta-gold.json  meta-gold.yaml  pyproject-gold.toml  relpo.yml
test-resources/pyproject-template/: local.toml  pixi.toml  pyproject.toml
tests/: test_domain.py  test_envdist.py  test_pyproject.py  util.py
